--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="/style/estilo.css">
+
     <!-- Fontes -->
     <!-- Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -102,7 +103,7 @@
                         <p class="nomePrincipal rocket"> R$ 39,90</p>
                     </div>
                 </div>
-                <button onclick="click()" class="click"><img src="arquivos_SVG/setaDireita.svg" alt="seta para direita" class="setas" ></button>
+                <button onclick="arrowButton()" class="arrowButton" ><img src="arquivos_SVG/setaDireita.svg" alt="seta para direita" class="arrowButton setas" ></button>
             </div>
             
         </section>
@@ -137,6 +138,7 @@
             </div>
         </section>
     </main>
+    <script src="interatividade/interatividade.js"></script>
     
 </body>
 </html>
