--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
                 
                 <img src="arquivos_SVG/logo.svg" alt="Logo marca da empresa TACO" class="logoNav">
                 <ul class="opcoes">
-                    <li>Novidades</li>
-                    <li>Jeans</li>
-                    <li>Masculino</li>
-                    <li>Feminino</li>
-                    <li>Calçados</li>
-                    <li>acessórios</li>
-                    <li>Kids</li>
-                    <li>Promoção</li>
+                    <li>
+                        <a href="#novidades">Novidades</a>
+                    </li>
+                    <li><a href="">Jeans</a></li>
+                    <li><a href="">Masculino</a></li>
+                    <li><a href="">Feminino</a></li>
+                    <li><a href="">Calçados</a></li>
+                    <li><a href="">acessórios</a></li>
+                    <li><a href="">Kids</a></li>
+                    <li><a href="">Promoção</a></li>
                 </ul>
                 <ul class="areaUsuario">
                     <li>
@@ -109,9 +111,9 @@
         </section>
         <section>
             <ul class="containerLista">
-                <li>Masculino</li>
-                <li>Kids</li>
-                <li>Feminino</li>
+                <li><a href="#masculino">Masculino</a></li>
+                <li><a href="#kids">Kids</a></li>
+                <li><a href="#feminino">Feminino</a></li>
             </ul>
             <div class="containerProdutos">
                 <div>
