--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </header>
     <main>
         <section class="promocoes">
-            
+            <img src="" alt="">
             <h1 class="textoPrincipal">Super / Desconto</h1>
             <div class="promocoesItems">
                 <button><img src="arquivos_SVG/setaEsquerda.svg" alt="Seta para esquerda" class="setas"></button>
