--- a/index.html
+++ b/index.html
@@ -72,40 +72,12 @@
     <main>
         <section class="promocoes">
             <img src="" alt="">
-            <h1 class="textoPrincipal">Super / Desconto</h1>
+           <!--  <h1 class="textoPrincipal">Super / Desconto</h1> -->
             <div class="promocoesItems">
                 <button><img src="arquivos_SVG/setaEsquerda.svg" alt="Seta para esquerda" class="setas"></button>
                 <div>
-                    <div class="chamadas">
-                        <p class="nomePrincipal">T-shirt</p>
-                        <p class="subNome">basica - masculina - feminina</p>
-                    </div>
-                    <div>
-                        <p class="subNome">Por:</p>
-                        <p class="nomePrincipal rocket"> R$ 39,90</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="chamadas">
-                        <p class="nomePrincipal">T-shirt</p>
-                        <p class="subNome">basica - masculina - feminina</p>
-                    </div>
-                    <div>
-                        <p class="subNome">Por:</p>
-                        <p class="nomePrincipal rocket"> R$ 39,90</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="chamadas">
-                        <p class="nomePrincipal">T-shirt</p>
-                        <p class="subNome">basica - masculina - feminina</p>
-                    </div>
-                    <div>
-                        <p class="subNome">Por:</p>
-                        <p class="nomePrincipal rocket"> R$ 39,90</p>
-                    </div>
-                </div>
-                <button onclick="arrowButton()" class="arrowButton" ><img src="arquivos_SVG/setaDireita.svg" alt="seta para direita" class="arrowButton setas" ></button>
+                <img src="" alt="">
+                <button onclick="arrowButton()" class="arrowButton" ><img src="arquivos_SVG/setaDireita.svg" alt="seta para direita" class="arrowButton setas"></button>
             </div>
             
         </section>
