--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="promocoesItems">
                 <button><img src="arquivos_SVG/setaEsquerda.svg" alt="Seta para esquerda" class="setas"></button>
                 <div>
-                <img src="" alt="">
+                <img src="imagens/Captura de tela 2024-05-11 204325.png" class="promoDestaque" alt="seção de promoções em destaque">
                 <button onclick="arrowButton()" class="arrowButton" ><img src="arquivos_SVG/setaDireita.svg" alt="seta para direita" class="arrowButton setas"></button>
             </div>
             
