--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lojas Taco</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style/global.css">
-    <link rel="stylesheet" href="/style/estilo.css">
+    <link rel="stylesheet" href="style/estilo.css">
 
     <!-- Fontes -->
     <!-- Roboto -->
